fix small logo spacing

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -40,7 +40,7 @@ $hover-dark-gray: #413c38 !default;
   border-bottom: 1px solid $table-border-color;
 
   .navbar-brand {
-    padding: 16px 26px 10px 29px;
+    padding: 16px 28px 10px 27px;
     margin-right: 14px;
     background-color: $brand-customer;
 
